--- a/pom.xml
+++ b/pom.xml
@@ -463,7 +463,8 @@
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>cloudbees-bitbucket-branch-source</artifactId>
-            <version>2.2.5</version>
+            <!-- TODO: temporarily there  -->
+            <version>2.2.4-20171006.072028-1</version>
         </dependency>
         <dependency>
             <groupId>org.apache.maven</groupId>
