--- a/blueocean-events/pom.xml
+++ b/blueocean-events/pom.xml
@@ -51,6 +51,11 @@
                     <groupId>com.jcraft</groupId>
                     <artifactId>jsch</artifactId>
                 </exclusion>
+                <!-- Upper dependency fix: annotation-indexer comes from core, exclude from git -->
+                <exclusion>
+                    <groupId>org.jenkins-ci</groupId>
+                    <artifactId>annotation-indexer</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
         <dependency>
