--- a/blueocean-dashboard/package.json
+++ b/blueocean-dashboard/package.json
@@ -43,7 +43,7 @@
     "skin-deep": "0.16.0"
   },
   "dependencies": {
-    "@jenkins-cd/blueocean-core-js": "0.0.168",
+    "@jenkins-cd/blueocean-core-js": "0.0.169-SNAPSHOT-1",
     "@jenkins-cd/design-language": "0.0.157",
     "@jenkins-cd/js-extensions": "0.0.39",
     "@jenkins-cd/js-modules": "0.0.10",
