--- a/blueocean-personalization/package.json
+++ b/blueocean-personalization/package.json
@@ -39,7 +39,7 @@
     "react-addons-test-utils": "15.4.2"
   },
   "dependencies": {
-    "@jenkins-cd/blueocean-core-js": "0.0.168",
+    "@jenkins-cd/blueocean-core-js": "0.0.169-SNAPSHOT-1",
     "@jenkins-cd/design-language": "0.0.157",
     "@jenkins-cd/js-extensions": "0.0.39",
     "@jenkins-cd/js-modules": "0.0.10",
