--- a/blueocean-web/package.json
+++ b/blueocean-web/package.json
@@ -30,7 +30,7 @@
     "zombie": "4.2.1"
   },
   "dependencies": {
-    "@jenkins-cd/blueocean-core-js": "0.0.168",
+    "@jenkins-cd/blueocean-core-js": "0.0.169-SNAPSHOT-1",
     "@jenkins-cd/design-language": "0.0.157",
     "@jenkins-cd/js-extensions": "0.0.39",
     "@jenkins-cd/js-modules": "0.0.10",
