--- a/acceptance-tests/runner/runtime-plugins/fake-securitly-realm-plugin/pom.xml
+++ b/acceptance-tests/runner/runtime-plugins/fake-securitly-realm-plugin/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>plugin</artifactId>
-    <version>2.11</version>
+    <version>2.35</version>
     <relativePath/>
   </parent>
   <groupId>org.jenkins-ci.plugins</groupId>
@@ -23,6 +23,7 @@
          ~ hpi-plugin.version: The HPI Maven Plugin version used by the plugin..
          ~ stapler-plugin.version: The Stapler Maven plugin version required by the plugin.
     -->
+    <java.level>8</java.level>
   </properties>
 
   <name>Fake realm plugin</name>
@@ -66,12 +67,12 @@
       <url>https://repo.jenkins-ci.org/public/</url>
     </pluginRepository>
   </pluginRepositories>
- <dependencies>
-   <dependency>
-     <groupId>org.jenkins-ci.main</groupId>
-     <artifactId>jenkins-test-harness</artifactId>
-     <version>2.15</version>
-   </dependency>
- </dependencies>
+   <dependencies>
+     <dependency>
+       <groupId>org.jenkins-ci.main</groupId>
+       <artifactId>jenkins-test-harness</artifactId>
+       <version>2.30</version>
+     </dependency>
+   </dependencies>
 
 </project>
