--- a/acceptance-tests/runner/runtime-plugins/runtime-deps/pom.xml
+++ b/acceptance-tests/runner/runtime-plugins/runtime-deps/pom.xml
@@ -28,7 +28,7 @@
     <parent>
         <groupId>org.jenkins-ci.plugins</groupId>
         <artifactId>plugin</artifactId>
-        <version>2.10</version>
+        <version>2.35</version>
         <relativePath />
     </parent>
     <groupId>org.jenkins-ci.plugins.blueocean</groupId>
@@ -57,6 +57,8 @@
     </pluginRepositories>
     <properties>
         <jenkins.version>2.73.2</jenkins.version>
+        <jenkins-test-harness.version>2.30</jenkins-test-harness.version>
+        <java.level>8</java.level>
     </properties>
     <dependencies>
         <dependency>
