--- a/blueocean-web/package.json
+++ b/blueocean-web/package.json
@@ -15,7 +15,7 @@
   "devDependencies": {
     "@jenkins-cd/blueocean-core-js": "0.0.168",
     "@jenkins-cd/design-language": "0.0.157",
-    "@jenkins-blueocean/js-builder": "0.0.62",
+    "@jenkins-cd/js-builder": "0.0.60-kz-1",
     "@jenkins-cd/js-extensions": "0.0.39-kz-1",
     "babel-eslint": "7.0.0",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
