--- a/pom.xml
+++ b/pom.xml
@@ -720,7 +720,7 @@
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>junit</artifactId>
-            <version>1.22-20170815.171655-1</version> <!-- TODO: Switch to release once https://github.com/jenkinsci/junit-plugin/pull/76 is merged and released -->
+            <version>1.22-beta-1</version> <!-- TODO: Switch to 1.22 post-beta -->
         </dependency>
 
         <!-- used in blueocean-rest-impl test -->
