--- a/blueocean-web/package.json
+++ b/blueocean-web/package.json
@@ -29,6 +29,7 @@
     "giti": "1.1.3",
     "gulp": "3.9.1",
     "jquery-detached": "2.1.4-v4",
+    "moment": "2.15.1",
     "ncp": "2.0.0",
     "react-router": "2.8.1",
     "reactify": "1.1.1",
@@ -42,7 +43,6 @@
     "mobx": "2.6.0",
     "mobx-react": "3.5.7",
     "mobx-react-devtools": "4.2.6",
-    "moment": "2.15.1",
     "react": "15.4.2",
     "react-addons-css-transition-group": "15.4.2",
     "react-dom": "15.4.2",
@@ -50,5 +50,10 @@
     "react-redux": "4.4.5",
     "redux": "3.6.0",
     "redux-thunk": "2.1.0"
+  },
+  "jenkinscd": {
+    "import": [
+      "moment@any"
+    ]
   }
 }
