--- a/acceptance-tests/runner/runtime-plugins/runtime-deps/pom.xml
+++ b/acceptance-tests/runner/runtime-plugins/runtime-deps/pom.xml
@@ -86,26 +86,27 @@
             <artifactId>structs</artifactId>
             <version>1.10</version>
         </dependency>
-        
+
         <dependency>
           <groupId>org.jenkins-ci.plugins</groupId>
           <artifactId>blueocean-executor-info</artifactId>
           <version>0.1-beta-1</version>
+          <scope>provided</scope> <!-- temporarily disabling this from ATH -->
           <exclusions>
             <exclusion>  <!-- declare the exclusion here -->
               <groupId>io.jenkins.blueocean</groupId>
-              <artifactId>blueocean</artifactId>            
+              <artifactId>blueocean</artifactId>
             </exclusion>
             <exclusion>  <!-- declare the exclusion here -->
               <groupId>io.jenkins.blueocean</groupId>
-              <artifactId>blueocean-rest</artifactId>            
+              <artifactId>blueocean-rest</artifactId>
             </exclusion>
             <exclusion>  <!-- declare the exclusion here -->
               <groupId>io.jenkins.blueocean</groupId>
-              <artifactId>blueocean-web</artifactId>            
+              <artifactId>blueocean-web</artifactId>
             </exclusion>
-            
-          </exclusions>           
+
+          </exclusions>
         </dependency>
     </dependencies>
     <profiles>
