--- a/blueocean-github-pipeline/pom.xml
+++ b/blueocean-github-pipeline/pom.xml
@@ -21,14 +21,6 @@
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>blueocean-pipeline-api-impl</artifactId>
-      <exclusions>
-        <!-- Upper bound fix: credentials plugin is bringing its own version of antlr4-runtime,
-        wiremock uses later version -->
-        <exclusion>
-          <groupId>org.antlr</groupId>
-          <artifactId>antlr4-runtime</artifactId>
-        </exclusion>
-      </exclusions>
     </dependency>
 
     <dependency>
@@ -64,23 +56,10 @@
       <scope>test</scope>
     </dependency>
 
-    <!--Needed to preempt wiremock from loading older version and breaking, that breaking serialization -->
-    <dependency>
-      <groupId>com.fasterxml.jackson.core</groupId>
-      <artifactId>jackson-core</artifactId>
-    </dependency>
-
     <dependency>
       <groupId>com.github.tomakehurst</groupId>
-      <artifactId>wiremock</artifactId>
+      <artifactId>wiremock-standalone</artifactId>
       <scope>test</scope>
-      <exclusions>
-        <!-- Upper bound fix: httpclient comes from blueocean-rest-impl with later version than the one in wiremock -->
-        <exclusion>
-          <groupId>org.apache.httpcomponents</groupId>
-          <artifactId>httpclient</artifactId>
-        </exclusion>
-      </exclusions>
     </dependency>
   </dependencies>
 
