--- a/acceptance-tests/runner/runtime-plugins/runtime-deps/pom.xml
+++ b/acceptance-tests/runner/runtime-plugins/runtime-deps/pom.xml
@@ -90,8 +90,7 @@
         <dependency>
           <groupId>org.jenkins-ci.plugins</groupId>
           <artifactId>blueocean-executor-info</artifactId>
-          <version>0.1-beta-1</version>
-          <scope>provided</scope> <!-- temporarily disabling this from ATH -->
+          <version>0.1-beta-2-SNAPSHOT</version>
           <exclusions>
             <exclusion>  <!-- declare the exclusion here -->
               <groupId>io.jenkins.blueocean</groupId>
