--- a/pom.xml
+++ b/pom.xml
@@ -720,7 +720,7 @@
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>junit</artifactId>
-            <version>1.22-beta-1</version> <!-- TODO: Switch to 1.22 post-beta -->
+            <version>1.22-beta-2-20171019.094026-1</version> <!-- TODO: Switch to 1.22 post-beta -->
             <exclusions>
                 <exclusion>
                     <groupId>org.jenkins-ci.plugins</groupId>
