--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -4,3 +4,6 @@
 
 # We need to keep tight control on dependencies
 pom.xml    @vivek @michaelneale @kzantow
+
+# Jenkins design language is used outside of blue ocean repo, so want to watch changes closely for approval
+jenkins-design-language/*   @kzantow @scherler @cliffmeyers
