Squashed commit of the following:
commit 22ccf0537fea65db7068561a360ed7abd6bdf8c2
Author: Josh McDonald <josh@joshmcdonald.info>
Date:   Fri Oct 20 16:24:33 2017 +1000

    task/prettify * Revert the module package.jsons

commit 4fc4ad3713b6816c9c56b2d413b43ab22e138522
Author: Josh McDonald <josh@joshmcdonald.info>
Date:   Fri Oct 20 16:15:59 2017 +1000

    Revert a source file I accidentally committed earlier

commit 292cb204c62370ddf15a2a46263960f12d3aa76b
Author: Josh McDonald <josh@joshmcdonald.info>
Date:   Fri Oct 20 16:11:36 2017 +1000

    task/prettify * Should be working now, as well as reformatting itself as part of this commit :D

commit 3ebad59d6a6b777f9c628365a3890c74e9cb1d9a
Author: Josh McDonald <josh@joshmcdonald.info>
Date:   Thu Oct 19 13:59:15 2017 +1000

    should not commit

commit 5c925e3f448e47b7dc02cefd4dc110866698b8c9
Author: Josh McDonald <josh@joshmcdonald.info>
Date:   Thu Oct 19 13:58:03 2017 +1000

    should not commit

commit f7f7fa3fdad419e31bf14051ad762026b6bb7eb4
Author: Josh McDonald <josh@joshmcdonald.info>
Date:   Thu Oct 19 13:29:02 2017 +1000

    Add hashbang

commit a67b1b041dc26214acfb19e2dbd593fdbf42f7a5
Author: Josh McDonald <josh@joshmcdonald.info>
Date:   Thu Oct 19 12:13:08 2017 +1000

    more noise

commit 2d5a0d0950137c906387065c40d77975e49b0877
Author: Josh McDonald <josh@joshmcdonald.info>
Date:   Thu Oct 19 12:09:49 2017 +1000

    should not work

commit 59dd8c79da65372f02318816ec39e3b99d82d777
Author: Josh McDonald <josh@joshmcdonald.info>
Date:   Wed Oct 18 18:30:12 2017 +1000

    task/prettify * run on self

commit 8e713a9827dc41f2a66c022d74f30baa882d5a60
Author: Josh McDonald <josh@joshmcdonald.info>
Date:   Wed Oct 18 18:25:38 2017 +1000

    task/prettify * Fix an issue where usage wouldn't always show

commit 10e1253d4640da6ff343760c6061c58065debd0a
Author: Josh McDonald <josh@joshmcdonald.info>
Date:   Wed Oct 18 18:02:26 2017 +1000

    task/prettify * fix some more issues

commit a6d721d809d110a7f2

--- a/bin/package.json
+++ b/bin/package.json
@@ -10,9 +10,9 @@
   "license": "ISC",
   "devDependencies": {
     "async": "^2.0.1",
+    "graceful-fs": "4.1.11",
+    "prettier": "1.7.4",
     "prompt": "^1.0.0"
   },
-  "dependencies": {
-    "@jenkins-cd/design-language": "0.0.79-unpublishedthor1"
-  }
+  "dependencies": {}
 }
