[FIX JENKINS-42602] Convert JDL and core-js to HPI & auto-watch all plugins to bundle (#1257)

--- a/blueocean-web/pom.xml
+++ b/blueocean-web/pom.xml
@@ -24,6 +24,14 @@
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>variant</artifactId>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>jenkins-design-language</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>blueocean-core-js</artifactId>
+        </dependency>
 
         <!-- test scope deps -->
         <dependency>
