--- a/blueocean-core-js/package.json
+++ b/blueocean-core-js/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jenkins-cd/blueocean-core-js",
-  "version": "0.0.171-SNAPSHOT",
+  "version": "0.0.170",
   "description": "Shared JavaScript libraries for use with Jenkins Blue Ocean",
   "main": "dist/js/index.js",
   "scripts": {
@@ -10,10 +10,14 @@
     "flow": "flow",
     "gulp": "gulp",
     "gulp:fast": "gulp clean-build",
-    "bundle:watch": "gulp watch",
+    "bundle:watch": "gulp bundle:watch",
     "test": "gulp test",
     "test:debug": "node --debug-brk ./node_modules/.bin/gulp test-debug",
     "test:fast": "gulp test-fast",
+    "prepublish": "gulp",
+    "mvnbuild": "gulp build bundle",
+    "mvnbuild:fast": "gulp bundle",
+    "mvntest": "gulp test",
     "build": "npm install && npm run gulp"
   },
   "author": "Cliff Meyers <cmeyers@cloudbees.com> (https://www.cloudbees.com/)",
@@ -32,8 +36,6 @@
     "url": "https://github.com/jenkinsci/blueocean-plugin.git"
   },
   "dependencies": {
-    "@jenkins-cd/design-language": "0.0.158",
-    "@jenkins-cd/js-extensions": "0.0.39",
     "@jenkins-cd/js-modules": "0.0.10",
     "@jenkins-cd/logging": "0.0.6",
     "@jenkins-cd/sse-gateway": "0.0.21",
@@ -47,17 +49,15 @@
     "jsonwebtoken": "7.1.9",
     "mobx": "2.6.0",
     "mobx-utils": "1.1.2",
-    "moment": "2.15.1",
     "pem-jwk": "1.5.1",
-    "react-remarkable": "1.1.1",
-    "react-router": "2.3.0"
-  },
-  "peerDependencies": {
-    "react": "^15.1.0",
-    "react-dom": "^15.1.0"
+    "react-remarkable": "1.1.1"
   },
   "devDependencies": {
+    "@jenkins-cd/design-language": "0.0.158",
     "@jenkins-cd/eslint-config-jenkins": "0.0.2",
+    "@jenkins-cd/js-builder": "0.0.60-kz-1",
+    "@jenkins-cd/js-extensions": "0.0.39-kz-2",
+    "@jenkins-cd/js-modules": "0.0.10",
     "@kadira/storybook": "2.20.1",
     "babel-eslint": "7.0.0",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
@@ -83,13 +83,22 @@
     "jest": "19.0.2",
     "jest-cli": "19.0.2",
     "jest-junit": "1.5.1",
+    "less": "2.7.2",
     "minimist": "1.2.0",
+    "moment": "2.15.1",
     "nock": "9.0.14",
     "react": "15.4.2",
     "react-addons-test-utils": "15.4.2",
     "react-dom": "15.4.2",
+    "react-router": "2.8.1",
+    "reactify": "1.1.1",
     "run-sequence": "1.2.2",
     "sinon": "1.17.6",
     "watchify": "3.7.0"
+  },
+  "jenkinscd": {
+    "import": [
+      "moment@any"
+    ]
   }
 }
