--- a/blueocean-dashboard/package.json
+++ b/blueocean-dashboard/package.json
@@ -18,8 +18,11 @@
     "mvntest": "gulp test"
   },
   "devDependencies": {
+    "@jenkins-cd/blueocean-core-js": "0.0.170",
+    "@jenkins-cd/design-language": "0.0.158",
     "@jenkins-cd/eslint-config-jenkins": "0.0.2",
-    "@jenkins-cd/js-builder": "0.0.59",
+    "@jenkins-cd/js-builder": "0.0.60-kz-1",
+    "@jenkins-cd/js-extensions": "0.0.39-kz-2",
     "@jenkins-cd/js-builder-jest": "0.0.4",
     "@kadira/storybook": "2.20.1",
     "babel": "6.5.2",
@@ -39,13 +42,12 @@
     "mocha": "3.1.0",
     "nock": "8.0.0",
     "react-addons-test-utils": "15.4.2",
+    "react-router": "2.8.1",
+    "reactify": "1.1.1",
     "redux-mock-store": "1.2.1",
     "skin-deep": "0.16.0"
   },
   "dependencies": {
-    "@jenkins-cd/blueocean-core-js": "0.0.170",
-    "@jenkins-cd/design-language": "0.0.158",
-    "@jenkins-cd/js-extensions": "0.0.39",
     "@jenkins-cd/js-modules": "0.0.10",
     "@jenkins-cd/preferences": "0.0.4",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
@@ -56,8 +58,6 @@
     "mobx": "2.6.0",
     "mobx-react": "3.5.7",
     "mobx-utils": "1.1.2",
-    "moment": "2.15.1",
-    "moment-duration-format": "1.3.0",
     "react": "15.4.2",
     "react-addons-css-transition-group": "15.4.2",
     "react-addons-update": "15.4.2",
@@ -66,20 +66,21 @@
     "react-i18next": "1.10.1",
     "react-redux": "4.4.5",
     "react-remarkable": "1.1.1",
-    "react-router": "2.3.0",
     "recharts": "1.0.0-alpha.4",
     "redux": "3.6.0",
     "redux-thunk": "2.1.0",
     "reselect": "2.5.4"
   },
   "jenkinscd": {
-    "import": [
-      "immutable",
-      "keymirror",
-      "react-redux",
-      "react-router",
-      "redux-thunk",
+    "export": [
       "reselect"
+    ],
+    "import": [
+      "immutable@any",
+      "keymirror@any",
+      "react-redux@any",
+      "react-router@any",
+      "redux-thunk@any"
     ]
   }
 }
