--- a/jenkins-design-language/package.json
+++ b/jenkins-design-language/package.json
@@ -1,15 +1,20 @@
 {
   "name": "@jenkins-cd/design-language",
   "jdlName": "jenkins-design-language",
-  "version": "0.0.159-SNAPSHOT",
+  "version": "0.0.158",
   "description": "Styles, assets, and React classes for Jenkins Design Language",
   "main": "dist/js/components/index.js",
   "scripts": {
     "storybook": "npm run gulp build && start-storybook -p 9001 --static-dir dist/assets/",
     "build-storybook": "build-storybook --static-dir dist/assets/ --output-dir website/storybook",
     "flow": "flow",
-    "gulp": "gulp",
+    "gulp": "gulp build",
     "test": "gulp test",
+    "prepublish": "gulp test",
+    "mvnbuild": "gulp build bundle",
+    "mvnbuild:fast": "gulp bundle",
+    "mvntest": "gulp test",
+    "bundle:watch": "gulp bundle:watch",
     "test:debug": "node --debug-brk ./node_modules/.bin/gulp test-debug",
     "test:fast": "gulp test-fast",
     "build": "npm install && npm run gulp",
@@ -50,6 +55,8 @@
     "react-dom": "15.4.2"
   },
   "devDependencies": {
+    "@jenkins-cd/js-builder": "0.0.60-kz-1",
+    "@jenkins-cd/js-modules": "0.0.10",
     "@kadira/storybook": "2.35.3",
     "babel-eslint": "7.0.0",
     "babel-polyfill": "6.16.0",
@@ -61,7 +68,8 @@
     "chai": "3.5.0",
     "cli-spinner": "0.2.6",
     "enzyme": "2.5.1",
-    "eslint-plugin-react": "6.4.1",
+    "eslint": "2.13.1",
+    "eslint-plugin-react": "4.3.0",
     "flow-bin": "0.33.0",
     "gulp": "3.9.1",
     "gulp-babel": "6.1.2",
@@ -78,6 +86,7 @@
     "jest": "19.0.2",
     "jest-cli": "19.0.2",
     "jest-junit": "1.5.1",
+    "less": "2.7.2",
     "minimist": "1.2.0",
     "normalize.css": "5.0.0",
     "octicons": "4.4.0",
@@ -85,5 +94,10 @@
     "react-router": "2.8.1",
     "run-sequence": "1.2.2",
     "watchify": "3.7.0"
+  },
+  "jenkinscd": {
+    "export": [
+      "moment"
+    ]
   }
 }
