--- a/js-extensions/package.json
+++ b/js-extensions/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jenkins-cd/js-extensions",
-  "version": "0.0.39",
+  "version": "0.0.39-kz-2",
   "description": "Jenkins Extension Store",
   "main": "index.js",
   "files": [
@@ -14,13 +14,14 @@
     "compile": "babel --presets es2015,react src -d dist",
     "test": "gulp test",
     "compile-test": "npm run compile && npm run test",
-    "lint": "gulp lint"
+    "lint": "gulp lint",
+    "prepublish": "npm run compile"
   },
   "author": "Tom Fennelly <tom.fennelly@gmail.com> (https://github.com/tfennelly)",
   "license": "MIT",
   "devDependencies": {
     "@jenkins-cd/eslint-config-jenkins": "0.0.2",
-    "@jenkins-cd/js-builder": "0.0.59",
+    "@jenkins-cd/js-builder": "0.0.60-kz-1",
     "@jenkins-cd/js-modules": "0.0.10",
     "@jenkins-cd/js-test": "1.2.3",
     "@jenkins-cd/logging": "0.0.6",
@@ -45,8 +46,8 @@
     "envify": "3.4.1",
     "js-yaml": "^3.6.0"
   },
-  "peerDependencies": {
-    "@jenkins-cd/logging": "0.0.6",
+  "_peerDependencies": {
+    "@jenkins-cd/logging": "^0.0.6",
     "react": "^0.14.7 || ^15.0.0",
     "react-dom": "^0.14.7 || ^15.0.0"
   }
