--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -11,7 +11,9 @@ USER root
 RUN apt-get update
 
 # Set utf-8 locale
+RUN locale-gen en_US.UTF-8
 ENV LANG en_US.UTF-8
+ENV LC_ALL en_US.UTF-8
 
 #========================
 # Miscellaneous packages
