--- a/blueocean-web/package.json
+++ b/blueocean-web/package.json
@@ -3,19 +3,20 @@
   "version": "0.0.1",
   "license": "MIT",
   "scripts": {
-    "lint": "gulp lint",
-    "lint:fix": "gulp lint --fixLint",
-    "test": "gulp test",
-    "test:watch": "gulp test:watch",
-    "bundle": "gulp bundle",
-    "bundle:watch": "gulp bundle:watch",
-    "mvnbuild": "gulp lint bundle",
-    "mvntest": "gulp test"
+    "lint": "jjsbuilder --tasks lint",
+    "lint:fix": "jjsbuilder --tasks lint --fixLint",
+    "lint:watch": "jjsbuilder --tasks lint:watch --continueOnLint",
+    "test": "jjsbuilder --tasks test",
+    "test:watch": "jjsbuilder --tasks test:watch",
+    "bundle": "jjsbuilder --tasks bundle",
+    "bundle:watch": "jjsbuilder --tasks bundle:watch",
+    "mvnbuild": "jjsbuilder --tasks bundle",
+    "mvntest": "jjsbuilder --tasks test,lint"
   },
   "devDependencies": {
     "@jenkins-cd/blueocean-core-js": "0.0.170",
     "@jenkins-cd/design-language": "0.0.158",
-    "@jenkins-cd/js-builder": "0.0.60-kz-1",
+    "@jenkins-cd/js-builder": "0.0.60-IE1",
     "@jenkins-cd/js-extensions": "0.0.39-kz-2",
     "babel-eslint": "7.0.0",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
