JENKINS-47378# Switch to JDK8 and core 2.73.2 (#1479)
* JENKINS-47378# Switch to JDK8 and core 2.60.3

* Updated scm sep and workflow job plugins

* workflow-job version > 2.12.2 is compatible with core 2.62 and higher

* Test fix to reliably stop a pipeline run

Also avoids race condition where CPS execution is interrupted while its
in the middle of writing node data to xstream resulting in result
reported as FAILURE due to underlying IOException vs expected ABORTED.

* Bump up core version to 2.60.3 for ATH as well

* Changed jenkins core versions for ath

* Use 2.73.2 LTS instead

* Findbugs fixes

* Log error message in ath test

* Fix build failure in ath runtime-plugins module and upgrade them to
2.73.2

* Added 10 more sec before timeout and some logging

* Increasing timeout to 1 min, lets see if its just slow load of config
page.

* enable nightwatch screenshots by placing "screenshots" config element in the right place

* suppress nightwatch screenshot during "command errors" since these seem superfluous

* Set utf-8 locale in the ubuntu container

* locale-gen and then set locale

* install locales

--- a/acceptance-tests/runner/runtime-plugins/fake-securitly-realm-plugin/pom.xml
+++ b/acceptance-tests/runner/runtime-plugins/fake-securitly-realm-plugin/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>plugin</artifactId>
-    <version>2.11</version>
+    <version>2.35</version>
     <relativePath/>
   </parent>
   <groupId>org.jenkins-ci.plugins</groupId>
@@ -16,13 +16,14 @@
 
   <properties>
     <!-- Baseline Jenkins version you use to build the plugin. Users must have this version or newer to run. -->
-    <jenkins.version>2.46.3</jenkins.version>
+    <jenkins.version>2.73.2</jenkins.version>
     <!-- Other properties you may want to use:
          ~ java.level: set to 6 if your jenkins.version <= 1.611
          ~ jenkins-test-harness.version: Jenkins Test Harness version you use to test the plugin. For Jenkins version >= 1.580.1 use JTH 2.0 or higher.
          ~ hpi-plugin.version: The HPI Maven Plugin version used by the plugin..
          ~ stapler-plugin.version: The Stapler Maven plugin version required by the plugin.
     -->
+    <java.level>8</java.level>
   </properties>
 
   <name>Fake realm plugin</name>
@@ -66,12 +67,12 @@
       <url>https://repo.jenkins-ci.org/public/</url>
     </pluginRepository>
   </pluginRepositories>
- <dependencies>
-   <dependency>
-     <groupId>org.jenkins-ci.main</groupId>
-     <artifactId>jenkins-test-harness</artifactId>
-     <version>2.15</version>
-   </dependency>
- </dependencies>
+   <dependencies>
+     <dependency>
+       <groupId>org.jenkins-ci.main</groupId>
+       <artifactId>jenkins-test-harness</artifactId>
+       <version>2.30</version>
+     </dependency>
+   </dependencies>
 
 </project>
