--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -24,8 +24,14 @@ RUN apt-get update -qqy \
     build-essential \
     python \
     iputils-ping \
+    locales \
   && rm -rf /var/lib/apt/lists/* \
   && sed -i 's/securerandom\.source=file:\/dev\/random/securerandom\.source=file:\/dev\/urandom/' ./usr/lib/jvm/java-8-openjdk-amd64/jre/lib/security/java.security
+
+# Set utf-8 locale
+RUN locale-gen en_US.UTF-8
+ENV LANG en_US.UTF-8
+ENV LC_ALL en_US.UTF-8
 
 #==========
 # Maven
