--- a/pom.xml
+++ b/pom.xml
@@ -16,9 +16,9 @@
   <name>Blue Ocean Parent</name>
 
   <properties>
-    <java.level>7</java.level>
+    <java.level>8</java.level>
     <jackson.version>2.8.9</jackson.version>
-    <jenkins.version>2.46.3</jenkins.version> <!-- Should be kept in sync with Dockerfile FROM statement-->
+    <jenkins.version>2.73.2</jenkins.version> <!-- Should be kept in sync with Dockerfile FROM statement-->
     <javadoc.exec.goal>javadoc-no-fork</javadoc.exec.goal> <!-- stop initialize phase plugins executing twice -->
     <frontend-version>1.6</frontend-version>
     <node.version>6.4.0</node.version>
@@ -32,7 +32,7 @@
     <jacoco.line.coverage>0.70</jacoco.line.coverage>
     <jacoco.missedclass.coverage>0.00</jacoco.missedclass.coverage>
     <hpi.dependencyResolution>runtime</hpi.dependencyResolution>
-    <jenkins-test-harness.version>2.27</jenkins-test-harness.version>
+    <jenkins-test-harness.version>2.30</jenkins-test-harness.version>
     <scm-api.version>2.2.2</scm-api.version>
     <git.version>3.5.1</git.version>
   </properties>
@@ -347,17 +347,11 @@
             <artifactId>workflow-api</artifactId>
             <version>2.20</version>
         </dependency>
-
-        <!--
-            workflow-job >= 2.12 requires a Jenkins core >= 2.60.
-            Do not upgrade this dependency without a discussion on jenkinsci-ux@googlegroups.com
-        -->
         <dependency>
             <groupId>org.jenkins-ci.plugins.workflow</groupId>
             <artifactId>workflow-job</artifactId>
-            <version>2.11.1</version>
+            <version>2.14.1</version>
         </dependency>
-
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>pipeline-graph-analysis</artifactId>
@@ -405,17 +399,11 @@
             <artifactId>workflow-basic-steps</artifactId>
             <version>2.6</version>
         </dependency>
-
-        <!--
-            workflow-scm-step >= 2.6 requires a Jenkins core >= 2.60.
-            Do not upgrade this dependency without a discussion on jenkinsci-ux@googlegroups.com
-        -->
         <dependency>
             <groupId>org.jenkins-ci.plugins.workflow</groupId>
             <artifactId>workflow-scm-step</artifactId>
-            <version>2.5</version>
+            <version>2.6</version>
         </dependency>
-
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>pipeline-stage-step</artifactId>
@@ -490,6 +478,13 @@
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>git</artifactId>
             <version>${git.version}</version>
+            <exclusions>
+                <!-- Upper dependency fix: annotation-indexer comes from core, exclude from git -->
+                <exclusion>
+                    <groupId>org.jenkins-ci</groupId>
+                    <artifactId>annotation-indexer</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
@@ -695,6 +690,13 @@
             <groupId>ua_parser</groupId>
             <artifactId>ua-parser</artifactId>
             <version>1.3.0</version>
+            <exclusions>
+              <!-- commons-collections comes from jenkins core -->
+              <exclusion>
+                <groupId>commons-collections</groupId>
+                <artifactId>commons-collections</artifactId>
+              </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
@@ -951,42 +953,42 @@
           <skip>true</skip>
         </configuration>
       </plugin>
-        <!-- Disable InjectedTest -->
-        <plugin>
-            <groupId>org.jenkins-ci.tools</groupId>
-            <artifactId>maven-hpi-plugin</artifactId>
-            <configuration>
-                <disabledTestInjection>true</disabledTestInjection>
-                <dependencyResolution>${hpi.dependencyResolution}</dependencyResolution>
-            </configuration>
-        </plugin>
+      <!-- Disable InjectedTest -->
+      <plugin>
+          <groupId>org.jenkins-ci.tools</groupId>
+          <artifactId>maven-hpi-plugin</artifactId>
+          <configuration>
+              <disabledTestInjection>true</disabledTestInjection>
+              <dependencyResolution>${hpi.dependencyResolution}</dependencyResolution>
+          </configuration>
+      </plugin>
 
-        <!--
-        TODO: Remove/review this as part of solving https://issues.jenkins-ci.org/browse/JENKINS-38888
-        See comment below on argLine config.
-        -->
-        <plugin>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <version>2.19.1</version>
-            <configuration>
-                <systemProperties>
-                    <property>
-                        <name>hudson.udp</name>
-                        <value>33849</value>
-                    </property>
-                </systemProperties>
-                <reuseForks>true</reuseForks>
-                <forkCount>${concurrency}</forkCount>
-                <!--
-                The following line is the one that's a must. Without it, with get jacoco complexity failures.
-                -->
-                <argLine>-Djava.awt.headless=true ${argLine}</argLine>
-                <rerunFailingTestsCount>0</rerunFailingTestsCount>
-                <systemPropertyVariables>
-                    <jacoco-agent.destfile>${project.build.directory}/code-coverage/jacoco.exec</jacoco-agent.destfile>
-                </systemPropertyVariables>
-            </configuration>
-        </plugin>
+      <!--
+      TODO: Remove/review this as part of solving https://issues.jenkins-ci.org/browse/JENKINS-38888
+      See comment below on argLine config.
+      -->
+      <plugin>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>2.19.1</version>
+          <configuration>
+              <systemProperties>
+                  <property>
+                      <name>hudson.udp</name>
+                      <value>33849</value>
+                  </property>
+              </systemProperties>
+              <reuseForks>true</reuseForks>
+              <forkCount>${concurrency}</forkCount>
+              <!--
+              The following line is the one that's a must. Without it, with get jacoco complexity failures.
+              -->
+              <argLine>-Djava.awt.headless=true ${argLine}</argLine>
+              <rerunFailingTestsCount>0</rerunFailingTestsCount>
+              <systemPropertyVariables>
+                  <jacoco-agent.destfile>${project.build.directory}/code-coverage/jacoco.exec</jacoco-agent.destfile>
+              </systemPropertyVariables>
+          </configuration>
+      </plugin>
 
         <!-- run findbugs on all modules -->
         <plugin>
