get lint working again; incorporate into main "mvnbuild" phase; fix one lint error

--- a/jenkins-design-language/package.json
+++ b/jenkins-design-language/package.json
@@ -8,8 +8,9 @@
     "storybook": "npm run gulp build && start-storybook -p 9001 --static-dir dist/assets/",
     "build-storybook": "build-storybook --static-dir dist/assets/ --output-dir website/storybook",
     "flow": "flow",
+    "lint": "gulp lint",
     "gulp": "gulp build",
-    "mvnbuild": "gulp build bundle",
+    "mvnbuild": "gulp lint build bundle",
     "mvnbuild:fast": "gulp bundle",
     "mvntest": "gulp test",
     "bundle:watch": "gulp bundle:watch",
