add lint to "mvnbuild" script so it's run in CI; remove unnecessary lint config in gulpfile since it's provided by js-builder

--- a/blueocean-core-js/package.json
+++ b/blueocean-core-js/package.json
@@ -8,13 +8,14 @@
     "storybook": "npm run start-storybook -- -p 9001",
     "storybook:port": "npm run start-storybook -- -p ",
     "flow": "flow",
+    "lint": "gulp lint",
     "gulp": "gulp",
     "gulp:fast": "gulp clean-build",
     "bundle:watch": "gulp bundle:watch",
     "test": "gulp test",
-    "mvnbuild": "gulp build bundle",
     "test:debug": "node --debug-brk ./node_modules/.bin/gulp test:debug",
     "test:fast": "gulp test:fast",
+    "mvnbuild": "gulp lint build bundle",
     "mvnbuild:fast": "gulp bundle",
     "mvntest": "gulp test"
   },
