clarify some comments

--- a/pom.xml
+++ b/pom.xml
@@ -1016,13 +1016,15 @@
             </activation>
             <build>
                 <plugins>
-                    <!-- run upstream dependency fetches for all js plugins -->
+
                     <plugin>
                         <groupId>io.jenkins.blueocean</groupId>
                         <artifactId>blueocean-maven-plugin</artifactId>
                         <version>0.0.2</version>
                         <executions>
                             <execution>
+                                <!-- unpack package.json + JS into node_modules for any deps with JS files -->
+                                <!-- NOTE: must use 'initialize' and be declared before frontend-plugin so this occurs before npm install -->
                                 <id>upstream-dependencies</id>
                                 <phase>initialize</phase>
                                 <goals>
