bind frontend-maven-plugin to clean phase so it can call into JDL and core-js to perform "extra" cleaning (deleting dist directory)

--- a/blueocean-config/package.json
+++ b/blueocean-config/package.json
@@ -4,6 +4,7 @@
   "description": "Configuration injected in BlueOcean UI",
   "scripts": {
     "build": "jjsbuilder",
+    "mvnclean": "echo 'clean'",
     "mvnbuild": "jjsbuilder --tasks bundle",
     "mvntest": "jjsbuilder --tasks test,lint"
   },
