--- a/pom.xml
+++ b/pom.xml
@@ -1048,6 +1048,18 @@
                         <executions>
 
                             <execution>
+                                <phase>clean</phase>
+                                <id>run clean</id>
+                                <goals>
+                                    <goal>npm</goal>
+                                </goals>
+                                <configuration>
+                                    <!-- The package.json must define an "mvnclean" script -->
+                                    <arguments>run mvnclean</arguments>
+                                </configuration>
+                            </execution>
+
+                            <execution>
                                 <phase>initialize</phase>
                                 <id>install node and npm</id>
                                 <goals>
