--- a/blueocean-personalization/package.json
+++ b/blueocean-personalization/package.json
@@ -12,6 +12,7 @@
     "test:watch": "gulp test:debug",
     "bundle": "gulp bundle",
     "bundle:watch": "gulp bundle:watch",
+    "mvnclean": "echo 'clean'",
     "mvnbuild": "gulp bundle",
     "mvntest": "gulp test lint"
   },
