--- a/jenkins-design-language/package.json
+++ b/jenkins-design-language/package.json
@@ -10,6 +10,7 @@
     "flow": "flow",
     "lint": "gulp lint",
     "gulp": "gulp build",
+    "mvnclean": "gulp clean",
     "mvnbuild": "gulp lint build bundle",
     "mvnbuild:fast": "gulp bundle",
     "mvntest": "gulp test",
