--- a/blueocean-core-js/package.json
+++ b/blueocean-core-js/package.json
@@ -8,17 +8,17 @@
     "storybook": "npm run start-storybook -- -p 9001",
     "storybook:port": "npm run start-storybook -- -p ",
     "flow": "flow",
+    "lint": "gulp lint",
     "gulp": "gulp",
     "gulp:fast": "gulp clean-build",
     "bundle:watch": "gulp bundle:watch",
     "test": "gulp test",
-    "test:debug": "node --debug-brk ./node_modules/.bin/gulp test-debug",
-    "test:fast": "gulp test-fast",
-    "prepublish": "gulp",
-    "mvnbuild": "gulp build bundle",
+    "test:debug": "node --debug-brk ./node_modules/.bin/gulp test:debug",
+    "test:fast": "gulp test:fast",
+    "mvnclean": "gulp clean",
+    "mvnbuild": "gulp lint build bundle",
     "mvnbuild:fast": "gulp bundle",
-    "mvntest": "gulp test",
-    "build": "npm install && npm run gulp"
+    "mvntest": "gulp test"
   },
   "author": "Cliff Meyers <cmeyers@cloudbees.com> (https://www.cloudbees.com/)",
   "contributors": [
@@ -56,6 +56,7 @@
     "@jenkins-cd/design-language": "0.0.158",
     "@jenkins-cd/eslint-config-jenkins": "0.0.2",
     "@jenkins-cd/js-builder": "0.0.62",
+    "@jenkins-cd/js-builder-jest": "0.0.4",
     "@jenkins-cd/js-extensions": "0.0.41",
     "@jenkins-cd/js-modules": "0.0.10",
     "@kadira/storybook": "2.20.1",
@@ -76,15 +77,10 @@
     "gulp-babel": "6.1.2",
     "gulp-copy": "0.0.2",
     "gulp-eslint": "3.0.1",
-    "gulp-jest": "1.0.0",
     "gulp-less": "3.1.0",
     "gulp-rename": "1.2.2",
     "gulp-sourcemaps": "1.6.0",
-    "jest": "19.0.2",
-    "jest-cli": "19.0.2",
-    "jest-junit": "1.5.1",
     "less": "2.7.2",
-    "minimist": "1.2.0",
     "moment": "2.15.1",
     "nock": "9.0.14",
     "react": "15.4.2",
