add dependencies for HttpRequest

--- a/acceptance-tests/src/main/resources/log4j.properties
+++ b/acceptance-tests/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
- Root logger option
+# Root logger option
 log4j.rootLogger=INFO, stdout
 
 # Direct log messages to stdout
@@ -6,3 +6,6 @@ log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{HH:mm:ss} %-5p - %m%n
+
+# wire output
+# log4j.logger.org.apache.http.wire = DEBUG
